# ogon-apps

./: meson.build
libs/ogon-message/: meson.build  ogon-messageConfig.cmake.in  ogon-message_fr.ts
libs/ogon-message/include/ogon-message/: ogon-message.h
ogon-message/: meson.build
shadow/: meson.build
